# sdd-kafka-databricks

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Dockerfile.connect  LICENSE  Makefile  README.md  databricks.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: 01_brainstorm.md  02_define.md  03_design.md  04_build.delegation.md  05_implementation_log.md  06_retrospective.md
.claude/kb/: anti-patterns.md  checklists.md  cicd.md  data-quality.md  databricks.md  governance.md  index.md  kafka-cdc.md  medallion.md  observability.md  schema-registry.md
.cursor/rules/: 00_index.mdc  00_project_context.mdc  01_data_contracts.mdc  02_notebooks.mdc  03_testing.mdc
.github/workflows/: ci.yml  deploy.yml
connectors/: debezium.json
contracts/: dlt_adapter.py  driver_shifts.yml  drivers.yml  gps_events.yml  inventory.yml  loader.py  menu_sections.yml  order_items.yml  order_status.yml  orders.yml  payment_events.yml  payments.yml  products.yml  pydantic_models.py  ratings.yml  receipts.yml  recommendations.yml  restaurants.yml  routes.yml  search_events.yml  spark_schema.py  support_tickets.yml  users_mongo.yml  users_mssql.yml
docs/adr/: 001_databricks_vs_snowflake.md  002_smt_and_bronze.md  003_parametrized_notebooks.md  004_liquid_clustering.md  005_gold_dimension_join_integrity.md  006_lakeflow_migration.md  007_pipeline_unification.md  (+1 more)
notebooks/: pipeline_bronze.ipynb  pipeline_silver.ipynb  pipeline_users.ipynb
pipelines/: bronze_silver_dlt.py  ubereats_pipeline.py
scripts/: export_kafka_to_volume.py  migrate_replica_identity.sh  preflight_unity_catalog.sh  register_connectors.sh
sql/: init.sql
tests/: load_to_postgres.py  test_contracts.py  test_dlt_adapter.py
(+46 files in other folders)
