[tool.poetry]
name = "sdd-kafka-databricks"
version = "1.1.0"
description = "CDC streaming pipeline: PostgreSQL → Debezium → Kafka → Databricks"
authors = ["Christian Rocha"]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = {version = "^2.4", extras = ["avro", "schemaregistry"]}
pydantic = "^2.7"
pyyaml = "^6.0"
psycopg2-binary = "^2.9"
pyarrow = "^16.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
ruff = "^0.4"
yamllint = "^1.35"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".claude", ".venv", "dist", "notebooks", "pipelines"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["contracts", "tests"]
